--- a/index.html
+++ b/index.html
@@ -8,37 +8,28 @@ title: Jiarui Fang
 <h3>Jiarui Fang (方佳瑞)</h3>
 <h5><a href="mailto:fangjiarui123@gmail.com">fangjiarui123 AT gmail.com</a></h5>
 <p>
-  I am currently a principal software engineer at Tencent, the director of a team for software for Large Lauguague/Diffusion Models (LLMs/DiTs) on heterogeneous hardware platforms, including NVIDIA GPU, Intel Gaudi and domestic NPUs.
-  I initialized the open-sourced project <a href="https://github.com/xdit-project/xDiT">xDiT</a>, A Scalable Inference Engine for Diffusion Transformers (DiTs) on multi-GPUs.
+  I am currently a software engineer at ByteDance, leading the Volcano Machine Learning Platform (veMLP) team. Before joining ByteDance, I was a principal software engineer at Tencent.
 </p>
 <p>
-  During an 20 months period from 2022 to 2023, I gained valuable experience with two startups.
-  I was one of the technical partners at LightYearAI, serving as the first technical member upon the company's inception. 
-  I led a team of 20+ members, with the responsibility of data curation for the pre-training of large language models.
-  The company was acquired by Meituan Inc just three months after its establishment.
-  Prior to that, I was the CTO of a LMSys startup company dedicated to open-source AI infrastructures, where I led the project <a href="https://github.com/hpcaitech/ColossalAI">ColossalAI</a>, a training framework for large language models.
+  My passion for open-source has led me to initiate several impactful projects, including:
+</p>
+<ul>
+  <li><b><a href="https://github.com/xdit-project/xDiT">xDiT</a></b>: A scalable inference engine for Diffusion Transformers (DiTs) on multi-GPUs.</li>
+  <li><b><a href="https://github.com/hpcaitech/ColossalAI">ColossalAI</a></b>: A unified parallel training framework for large language models, which I led as CTO at HPCAI-Tech.</li>
+  <li><b><a href="https://github.com/Tencent/PatrickStar">PatrickStar</a></b>: An efficient parallel training framework for large language models that is now a core component of ColossalAI.</li>
+  <li><b><a href="https://github.com/Tencent/TurboTransformers">TurboTransformers</a></b>: A high-performance inference runtime for Transformers.</li>
+</ul>
+<p>
+  From 2022 to 2023, I gained valuable experience in the startup world. I was a technical partner at LightYearAI, where I built and led a team of over 20 engineers focused on data curation for large language model pre-training. The company was acquired by Meituan just three months after its inception. Prior to that, I was the CTO of HPCAI-Tech, a startup dedicated to open-source AI infrastructure.
 </p>
 <p>
-  Before that, I was a senior engineer at Wechat AI, Tencent. 
-  My work was focused on improving the efficiency of online and offline AI applications with innovative parallel computing techniques.
-  I also took part in the development of some basic modules in the WeChat App, including the <a href="https://z.weixin.qq.com/">WeChat Input Method Engine</a> and the WeChat Translation System.
-  At Wechat AI, I initialized two popular open-sourced software, e.g. <a href="https://github.com/Tencent/TurboTransformers">TurboTransformers</a>, a fast runtime for transformer inference beating FasterTransformers at that time, 
-  <a href="https://github.com/Tencent/PatrickStar">PatrickStar</a>, an efficient parallel training framework for large language models that implements advanced CPU-GPU offloading techniques.
-  I'm proud that PatrickStar has become a core component of ColossalAI and has contributed to the training of the <a href="https://hunyuan.tencent.com/">Tencent Hunyuan LLM</a>. It's also been adopted as a key feature in <a href="https://github.com/alibaba/Pai-Megatron-Patch">Pai-Megatron-Patch</a> by Alibaba Cloud.
-  In 2021, I was deeply honored to receive the company's highest individual award in recognition of my contributions to open-source collaboration.
-</p>
-
-<p>
-  I received a Ph.D. in Computer Science from Tsinghua University in 2019.
-  My advisors are Prof. <a href="https://www.cs.tsinghua.edu.cn/info/1107/3507.htm">Guangwen Yang</a> and Prof. <a href="http://47.94.243.94/mediawiki/index.php/Haohuan_Fu">Haohuan Fu</a>. 
-  My research focused on applying High-Performance Computing (HPC) for scientific applications. 
-  The title of <a href="https://fangjiarui.github.io/assets/pdf/fangjiarui_phd_thesis.pdf">my doctoral dissertation</a> is <i>Parallel Deep Learning Training System on Sunway TaihuLight</i>.
-  I served as a visiting scholar under the supervision of <a href="https://web.cs.ucla.edu/~chohsieh/">Cho-Jui Hsieh</a> at the University of California, Davis, from 2018 to 2019.
+  Earlier in my career, I was a senior engineer at WeChat AI (Tencent), where I focused on improving the efficiency of AI applications through parallel computing. I also contributed to the development of foundational modules in the WeChat app, such as the <a href="https://z.weixin.qq.com/">WeChat Input Method Engine</a>. In recognition of my contributions to open-source collaboration, I was honored to receive Tencent's highest individual award in 2021.
 </p>
 <p>
-  I enjoy sports. 
-  My hobbies include jogging, football, swimming, and table tennis.
-  You can follow me on <a href="https://www.zhihu.com/people/feifeibear">知乎</a> and <a href="https://github.com/feifeibear">Github</a>.
+  I earned my Ph.D. in Computer Science from Tsinghua University in 2019, where I was advised by Prof. <a href="https://www.cs.tsinghua.edu.cn/info/1107/3507.htm">Guangwen Yang</a> and Prof. <a href="http://47.94.243.94/mediawiki/index.php/Haohuan_Fu">Haohuan Fu</a>. My doctoral research, titled <i>Parallel Deep Learning Training System on Sunway TaihuLight</i>, focused on applying high-performance computing to scientific applications. I also had the privilege of serving as a visiting scholar at the University of California, Davis, under the supervision of <a href="https://web.cs.ucla.edu/~chohsieh/">Cho-Jui Hsieh</a> from 2018 to 2019. I received my B.S. in Computer Science from Beijing University of Posts and Telecommunications in 2014.
+</p>
+<p>
+  Outside of work, I enjoy jogging, football, swimming, and table tennis. You can follow my work and interests on <a href="https://www.zhihu.com/people/feifeibear">知乎</a> and <a href="https://github.com/feifeibear">Github</a>.
 </p>
 </div>
 </div>
