--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@ title: Jiarui Fang
   <li><b><a href="https://github.com/Tencent/TurboTransformers">TurboTransformers</a></b>: A high-performance inference runtime for Transformers.</li>
 </ul>
 <p>
-  From 2022 to 2023, I gained valuable experience in the startup world. I was a technical partner at LightYearAI, where I built and led a team of over 20 engineers focused on data curation for large language model pre-training. The company was acquired by Meituan just three months after its inception. Prior to that, I was the CTO of HPCAI-Tech, a startup dedicated to open-source AI infrastructure.
+  From 2022 to 2023, I gained valuable experience in the startup world. I was a technical partner at LightYearAI, where I built and led a team of over 20 engineers focused on data curation for large language model pre-training. The company was acquired by Meituan just three months after its inception. Prior to that, I was the CTO of HPCAI-Tech for a whole year, a startup dedicated to open-source AI infrastructure at that time.
 </p>
 <p>
   Earlier in my career, I was a senior engineer at WeChat AI (Tencent), where I focused on improving the efficiency of AI applications through parallel computing. I also contributed to the development of foundational modules in the WeChat app, such as the <a href="https://z.weixin.qq.com/">WeChat Input Method Engine</a>. In recognition of my contributions to open-source collaboration, I was honored to receive Tencent's highest individual award in 2021.
