--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@ title: Jiarui Fang
 <ul>
   <li><b><a href="https://github.com/xdit-project/xDiT">xDiT</a></b>: A scalable inference engine for Diffusion Transformers (DiTs) on multi-GPUs.</li>
   <li><b><a href="https://github.com/hpcaitech/ColossalAI">ColossalAI</a></b>: A unified parallel training framework for large language models, which I led as CTO at HPCAI-Tech.</li>
-  <li><b><a href="https://github.com/Tencent/PatrickStar">PatrickStar</a></b>: An efficient parallel training framework for large language models that is now a core component of ColossalAI.</li>
+  <li><b><a href="https://github.com/Tencent/PatrickStar">PatrickStar</a></b>: An efficient parallel training framework for large language models that is now a core component of ColossalAI. It is also used in training <a href="https://hunyuan.tencent.com/">Tencent Hunyuan LLM</a> in Tencent, and adopted by <a href="https://developer.aliyun.com/article/1610582">Pai-Megatron-Patch</a> in Alibaba Cloud.</li>
   <li><b><a href="https://github.com/Tencent/TurboTransformers">TurboTransformers</a></b>: A high-performance inference runtime for Transformers.</li>
 </ul>
 <p>
