--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@ title: Jiarui Fang
 <h3>Jiarui Fang (方佳瑞)</h3>
 <h5><a href="mailto:fangjiarui123@gmail.com">fangjiarui123 AT gmail.com</a></h5>
 <p>
-  I am currently a software engineer at ByteDance, leading the Volcano Machine Learning Platform (veMLP) team. Before joining ByteDance, I was a principal software engineer at Tencent.
+  I am currently a software engineer at ByteDance, leading the <a href="https://www.volcengine.com/product/ml-platform">Volcano Engine Machine Learning Platform (veMLP)</a> team. Before joining ByteDance, I was a principal software engineer at Tencent.
 </p>
 <p>
-  My passion for open-source has led me to initiate several impactful projects, including:
+  My passion for open-source has led me to initiate several projects, including:
 </p>
 <ul>
   <li><b><a href="https://github.com/xdit-project/xDiT">xDiT</a></b>: A scalable inference engine for Diffusion Transformers (DiTs) on multi-GPUs.</li>
