fix: remove broken clustrmaps script

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 ---
 layout: default
+title: Jiarui Fang
 ---
 <div><!-- Do I want to show a pic on the phone screen?-->
 <div class="rightphoto"><img src="assets/img/fangjiaruiv3.jpeg" alt="photo" width="200px" /></div>
@@ -7,16 +8,15 @@ layout: default
 <h3>Jiarui Fang (方佳瑞)</h3>
 <h5><a href="mailto:fangjiarui123@gmail.com">fangjiarui123 AT gmail.com</a></h5>
 <p>
-  I am currently a software engineer at ByteDance, leading the <a href="https://www.volcengine.com/product/ml-platform">Volcano Engine Machine Learning Platform (veMLP)</a> team. Before joining ByteDance, I was a principal software engineer at Tencent.
+  I am currently a software engineer at ByteDance, leading the Volcano Machine Learning Platform (veMLP) team. Before joining ByteDance, I was a principal software engineer at Tencent.
 </p>
 <p>
-  My passion for open-source has led me to initiate and lead several widely-used projects, including:
+  My passion for open-source has led me to initiate and lead several impactful projects, including:
 </p>
-
 <ul>
-  <li><a href="https://github.com/xdit-project/xDiT">xDiT</a> (⭐️<span id="xdit-stars">...</span>): A scalable inference engine for Diffusion Transformers (DiTs) on multi-GPUs.</li>
+   <li><a href="https://github.com/xdit-project/xDiT">xDiT</a> (⭐️<span id="xdit-stars">...</span>): A scalable inference engine for Diffusion Transformers (DiTs) on multi-GPUs.</li>
    <li><a href="https://github.com/hpcaitech/ColossalAI">ColossalAI</a> (⭐️<span id="colossalai-stars">...</span>): A unified parallel training framework for large language models, which I led as CTO at HPCAI-Tech.</li>
-   <li><a href="https://github.com/Tencent/PatrickStar">PatrickStar</a> (⭐️<span id="patrickstar-stars">...</span>): An efficient parallel training framework for large language models, now a core component of ColossalAI. It is used to train Tencent's <a href="https://hunyuan.tencent.com/">Hunyuan LLM</a> and is adopted by Alibaba Cloud's <a href="https://developer.aliyun.com/article/1610582">Pai-Megatron-Patch</a>. My contributions to this open-source project earned me Tencent's highest individual award in 2021.</li>
+   <li><a href="https://github.com/Tencent/PatrickStar">PatrickStar</a> (⭐️<span id="patrickstar-stars">...</span>): An efficient parallel training framework for large language models, now a core component of ColossalAI. It is used to train Tencent's <a href="https://hunyuan.tencent.com/">Hunyuan LLM</a> and is adopted by Alibaba Cloud's <a href="https://github.com/alibaba/Pai-Megatron-Patch">Pai-Megatron-Patch</a>. My contributions to this open-source project earned me Tencent's highest individual award in 2021.</li>
    <li><a href="https://github.com/Tencent/TurboTransformers">TurboTransformers</a> (⭐️<span id="turbo-stars">...</span>): A high-performance inference runtime for Transformers.</li>
 </ul>
 <p>
@@ -37,8 +37,23 @@ layout: default
 <!--<a href="projects.html"> [Unpublished Projects]</a>-->
 <p>&nbsp;&nbsp;</p>
 <!--
+ *** Software ***
+
+<h3>
+  <a name='software'></a> Software 
+</h3>
+
 {% include software.html %}
--->
-<!--
+--><!--
+ *** Teaching ***
+
+<h3>
+  <a name='teaching'></a> Teaching (GSI)
+</h3>
+
 {% include teaching.html %}
 -->
+
+<body>
+<script type="text/javascript" id="clustrmaps" src="//cdn.clustrmaps.com/map_v2.js?cl=ffffff&w=300&t=tt&d=IUauw8ewM48TcdV7vaC71gwnoW5ILE5GvL1ZyMOfBh0&co=2d78ad&cmo=3acc3a&cmn=ff5353&ct=ffffff"></script>
+</body>
