--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@ title: Jiarui Fang
   My passion for open-source has led me to initiate and lead several impactful projects, including:
 </p>
 <ul>
-   <li><a href="https://github.com/xdit-project/xDiT">xDiT</a> (⭐️<span id="xdit-stars">...</span>): A scalable inference engine for Diffusion Transformers (DiTs) on multi-GPUs.</li>
-   <li><a href="https://github.com/hpcaitech/ColossalAI">ColossalAI</a> (⭐️<span id="colossalai-stars">...</span>): A unified parallel training framework for large language models, which I led as CTO at HPCAI-Tech.</li>
-   <li><a href="https://github.com/Tencent/PatrickStar">PatrickStar</a> (⭐️<span id="patrickstar-stars">...</span>): An efficient parallel training framework for large language models, now a core component of ColossalAI. It is used to train Tencent's <a href="https://hunyuan.tencent.com/">Hunyuan LLM</a> and is adopted by Alibaba Cloud's <a href="https://github.com/alibaba/Pai-Megatron-Patch">Pai-Megatron-Patch</a>. My contributions to this open-source project earned me Tencent's highest individual award in 2021.</li>
-   <li><a href="https://github.com/Tencent/TurboTransformers">TurboTransformers</a> (⭐️<span id="turbo-stars">...</span>): A high-performance inference runtime for Transformers.</li>
+   <li><a href="https://github.com/xdit-project/xDiT">xDiT</a> (⭐️2.3k): A scalable inference engine for Diffusion Transformers (DiTs) on multi-GPUs.</li>
+   <li><a href="https://github.com/hpcaitech/ColossalAI">ColossalAI</a> (⭐️41.2k): A unified parallel training framework for large language models, which I led as CTO at HPCAI-Tech.</li>
+   <li><a href="https://github.com/Tencent/PatrickStar">PatrickStar</a> (⭐️766): An efficient parallel training framework for large language models, now a core component of ColossalAI. It is used to train Tencent's <a href="https://hunyuan.tencent.com/">Hunyuan LLM</a> and is adopted by Alibaba Cloud's <a href="https://github.com/alibaba/Pai-Megatron-Patch">Pai-Megatron-Patch</a>. My contributions to this open-source project earned me Tencent's highest individual award in 2021.</li>
+   <li><a href="https://github.com/Tencent/TurboTransformers">TurboTransformers</a> (⭐️1.5k): A high-performance inference runtime for Transformers.</li>
 </ul>
 <p>
   From 2022 to 2023, I gained valuable experience in the startup world. I was a technical partner at LightYearAI, where I built and led a team of over 20 engineers focused on data curation for large language model pre-training. The company was acquired by Meituan just three months after its inception. Prior to that, I was the CTO of HPCAI-Tech for a whole year, a startup dedicated to open-source AI infrastructure at that time.
