Update personal introduction with MaaS service and hiring info

--- a/index.html
+++ b/index.html
@@ -8,7 +8,10 @@ title: Jiarui Fang
 <h3>Jiarui Fang (方佳瑞)</h3>
 <h5><a href="mailto:fangjiarui123@gmail.com">fangjiarui123 AT gmail.com</a></h5>
 <p>
-  I am currently a software engineer at ByteDance, leading the Volcano Machine Learning Platform (veMLP) team. Before joining ByteDance, I was a principal software engineer at Tencent.
+  I am currently a software engineer at ByteDance, leading a team focused on LLM/DiT training, inference, and reinforcement learning (RL). In this role, I am responsible for the Volcano Machine Learning Platform (veMLP) team and the ModelArt seedance/seedream MaaS (Model-as-a-Service) service.
+</p>
+<p>
+  My team is continuously hiring talented individuals interested in AI infrastructure and large model technologies. If you're passionate about building cutting-edge ML systems, feel free to reach out to me via email.
 </p>
 <p>
   My passion for open-source has led me to initiate and lead several impactful projects, including:
@@ -23,7 +26,7 @@ title: Jiarui Fang
   From 2022 to 2023, I gained valuable experience in the startup world. I was a technical partner at LightYearAI, where I built and led a team of over 20 engineers focused on data curation for large language model pre-training. The company was acquired by Meituan just three months after its inception. Prior to that, I was the CTO of HPCAI-Tech for a whole year, a startup dedicated to open-source AI infrastructure at that time.
 </p>
 <p>
-  Earlier in my career, I was a senior engineer at WeChat AI (Tencent), where I focused on improving the efficiency of AI applications through parallel computing. I also contributed to the development of foundational modules in the WeChat app, such as the <a href="https://z.weixin.qq.com/">WeChat Input Method Engine</a>.
+  Before joining ByteDance, I was a principal software engineer at Tencent. I also contributed to the development of foundational modules in the WeChat app, such as the <a href="https://z.weixin.qq.com/">WeChat Input Method Engine</a>.
 </p>
 <p>
   I earned my Ph.D. in Computer Science from Tsinghua University in 2019, advised by Prof. <a href="https://www.cs.tsinghua.edu.cn/info/1107/3507.htm">Guangwen Yang</a> and Prof. <a href="http://47.94.243.94/mediawiki/index.php/Haohuan_Fu">Haohuan Fu</a>. My doctoral research was titled <i>Parallel Deep Learning Training System on Sunway TaihuLight</i>. I was also a visiting scholar at the University of California, Davis, supervised by <a href="https://web.cs.ucla.edu/~chohsieh/">Cho-Jui Hsieh</a> from 2018 to 2019. I received my B.S. in Computer Science from Beijing University of Posts and Telecommunications in 2014.
