Update from ModelArt to Volcano Ark

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@ title: Jiarui Fang
 <h3>Jiarui Fang (方佳瑞)</h3>
 <h5><a href="mailto:fangjiarui123@gmail.com">fangjiarui123 AT gmail.com</a></h5>
 <p>
-  I am currently a software engineer at ByteDance, leading a team focused on LLM/DiT training, inference, and reinforcement learning (RL). In this role, I am responsible for the Volcano Machine Learning Platform (veMLP) team and the ModelArt seedance/seedream MaaS (Model-as-a-Service) service.
+  I am currently a software engineer at ByteDance, leading a team focused on LLM/DiT training, inference, and reinforcement learning (RL). In this role, I am responsible for the Volcano Machine Learning Platform (veMLP) team and the Volcano Ark seedance/seedream MaaS (Model-as-a-Service) service.
 </p>
 <p>
   My team is continuously hiring talented individuals interested in AI infrastructure and large model technologies. If you're passionate about building cutting-edge ML systems, feel free to reach out to me via email.
