Fix clustrmaps visitor count display by removing duplicate body tags

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@ title: Jiarui Fang
 {% include teaching.html %}
 -->
 
-<body>
+<div id="clustrmaps-container"></div>
 <script type="text/javascript" id="clustrmaps" src="//cdn.clustrmaps.com/map_v2.js?cl=ffffff&w=300&t=tt&d=IUauw8ewM48TcdV7vaC71gwnoW5ILE5GvL1ZyMOfBh0&co=2d78ad&cmo=3acc3a&cmn=ff5353&ct=ffffff"></script>
 <script>
 // Function to fetch GitHub star count
@@ -91,4 +91,3 @@ document.addEventListener('DOMContentLoaded', () => {
   fetchGitHubStars('Tencent/TurboTransformers', 'turbotransformers-stars');
 });
 </script>
-</body>
