Fix clustrmaps URL and container styling

--- a/index.html
+++ b/index.html
@@ -57,8 +57,8 @@ title: Jiarui Fang
 {% include teaching.html %}
 -->
 
-<div id="clustrmaps-container"></div>
-<script type="text/javascript" id="clustrmaps" src="//cdn.clustrmaps.com/map_v2.js?cl=ffffff&w=300&t=tt&d=IUauw8ewM48TcdV7vaC71gwnoW5ILE5GvL1ZyMOfBh0&co=2d78ad&cmo=3acc3a&cmn=ff5353&ct=ffffff"></script>
+<div id="clustrmaps-container" style="width: 300px; height: 300px; margin: 20px 0;"></div>
+<script type="text/javascript" id="clustrmaps" src="https://clustrmaps.com/map_v2.js?cl=ffffff&w=300&t=tt&d=IUauw8ewM48TcdV7vaC71gwnoW5ILE5GvL1ZyMOfBh0&co=2d78ad&cmo=3acc3a&cmn=ff5353&ct=ffffff"></script>
 <script>
 // Function to fetch GitHub star count
 function fetchGitHubStars(repo, elementId) {
